[project]
name = "myetl"
version = "0.1.2"
description = "Default template for PDM package"
authors = [
    {name = "wminhyuk", email = "seoseo1998@gmail.com"},
]
dependencies = ["requests>=2.32.3", "pandas>=2.2.3", "pyarrow>=19.0.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
